# LatticeQuantizer

./: .gitignore  README.md  pyproject.toml  setup.py
csrc/: bind.cpp  core.cpp  core.h
example/: main.py
experiment/: final_result.jsonl  run.py
experiment/configs/: fast.json  medium.json  slow.json  very_slow.json
lattice/: __init__.py  classical.py  construct.py  nsm.py  visualize.py
lattice/core/: __init__.py  clip_core.py  reduce_core.py
test/: clip.py  reduce.py
